tests/baselines/reference/yieldExpressionInControlFlow.errors.txt
tests/cases/conformance/es6/yieldExpressions/alsoFails.ts(3,9): error TS7034: Variable 'o' implicitly has type 'any[]' in some locations where its type cannot be determined.
tests/cases/conformance/es6/yieldExpressions/alsoFails.ts(5,9): error TS2322: Type 'void' is not assignable to type 'any[]'.
tests/cases/conformance/es6/yieldExpressions/alsoFails.ts(5,20): error TS7005: Variable 'o' implicitly has an 'any[]' type.


==== tests/cases/conformance/es6/yieldExpressions/bug25149.js (0 errors) ====
    function* f() {
        var o
        while (true) {
            o = yield o
        }
    }
    
==== tests/cases/conformance/es6/yieldExpressions/alsoFails.ts (3 errors) ====
    // fails in Typescript too
    function* g() {
        var o = []
            ~
!!! error TS7034: Variable 'o' implicitly has type 'any[]' in some locations where its type cannot be determined.
        while (true) {
            o = yield* o
            ~
!!! error TS2322: Type 'void' is not assignable to type 'any[]'.
                       ~
!!! error TS7005: Variable 'o' implicitly has an 'any[]' type.
        }
    }
    